<resources>
    <!--  应用全局通用  -->
    <string name="app_name">账房先生</string>
    <string name="app_option_delete">删除</string>
    <string name="app_option_delete_confirm">确认删除</string>
    <string name="app_option_cancel">取消</string>
    <string name="app_option_save">保存</string>
    <string name="app_image_desc">image</string>

    <!--  首页  -->
    <string name="main_list_income_and_pay">收入：%1$.2f 支出：%2$.2f</string>
    <string name="main_list_income">收入：%1$.2f</string>
    <string name="main_list_pay">支出：%1$.2f</string>
    <string name="main_top_income">收入</string>
    <string name="main_top_pay">支出</string>
    <string name="main_year_init">1970年</string>
    <string name="main_month_init">01</string>
    <string name="main_monty_unit">月</string>
    <string name="main_month_pick">选择月份</string>

    <!--  订单详情  -->
    <string name="billdetail_detail">账单明细</string>
    <string name="billdetail_type">类型：</string>
    <string name="billdetail_money">金额：</string>
    <string name="billdetail_date">日期：</string>
    <string name="billdetail_paytype">方式：</string>
    <string name="billdetail_remark">备注：</string>
    <string name="billdetail_edit">编辑</string>
    <string name="billdetail_delete">删除</string>
    <string name="billdetail_delete_message">请谨慎操作，删除后数据不可恢复！</string>

    <!--  关于App  -->
    <string name="about_name">名称:  账房先生 Lite</string>
    <string name="about_version">版本:  v%1$s</string>
    <string name="about_intro">简介:  账房先生Lite是一款无需联网，数据本地存储的记账App。
        他就是你的财务管家，让你随时了解自己的财务状况，摸清收入、支出的具体情况，
        看看自己到底挣了多少钱，花了多少钱，钱都花在什么地方。</string>
    <string name="about_copyright">Copyright @2018</string>
    <string name="about_company">深圳必酷科技有限公司</string>

    <!--  账单类型  -->
    <string name="billtype_income">收入</string>
    <string name="billtype_pay">支出</string>

    <!--  建议反馈  -->
    <string name="feedback_step_1">先生我隐居世外桃源，不问世事。\n请找我老板，他可能出门钓鱼了。</string>
    <string name="feedback_step_2">1、打开微信公众号，搜索\n我老板名号：BIGKOO2014。</string>
    <string name="feedback_step_3">2、对的，他就是我老板。</string>
    <string name="feedback_step_4">3、随意吐槽吧。</string>

    <!--  分类管理  -->
    <string name="categorymanage_delete">删除</string>
    <string name="catrgorymanage_add">+添加分类</string>
    <string name="categorymanage_income">收入</string>
    <string name="categorymanage_pay">支出</string>

    <!--  设置  -->
    <string name="settings_title">设置</string>
    <string name="settings_categorymanage">分类管理</string>
    <string name="settings_share">分享应用</string>
    <string name="settings_feedback">建议反馈</string>
    <string name="settings_permission">权限申明</string>
    <string name="settings_about">账房先生</string>

    <!--  添加分类  -->
    <string name="categoryadd_title">添加分类</string>
    <string name="categoryadd_hint">请输入分类名称(少于5个字)</string>
    <string name="categoryadd_empty">请输入分类名称</string>
    <string name="categoryadd_exist">分类已经存在了</string>
    <string name="categoryadd_delete">点击下列分类并添加</string>

    <!--  数据分析  -->
    <string name="charts_title">数据分析</string>
    <string name="charts_nodata">暂无数据</string>
    <string name="charts_income_desc">收入</string>
    <string name="charts_pay_desc">支出</string>
    <string name="charts_tab_week">7天</string>
    <string name="charts_tab_month">月</string>
    <string name="charts_tab_year">年</string>
    <string name="charts_data_unit">元</string>
    <string name="charts_income_top5">收入\nTop5</string>
    <string name="charts_pay_top5">支出\nTop5</string>

    <!--  录入账单  -->
    <string name="billadd_title">新建账单</string>
    <string name="billadd_title_edit">编辑账单</string>
    <string name="billadd_remark">备注：</string>
    <string name="billadd_remark_hint">点击写备注&#8230;</string>
    <string name="billadd_momey_default">0.00</string>
    <string name="keyboard_enter">确定</string>
    <string name="keyboard_equal">=</string>
    <string name="keyboard_function">今天</string>
    <string name="billadd_day_pick">选择日期</string>
    <string name="billadd_money_empty">请输入金额</string>
    <string name="billadd_category_empty">请选择分类</string>

</resources>
