<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.bigkoo.commonui.topbar.TopBarView
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_topbar_height"
            app:colorMode="Dark"
            app:showDivider="false"
            app:titleBackground="@color/app_frontground"
            app:titleText="@string/settings_categorymanage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/loTab"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_tab_height"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onChangeFragment"
                    android:text="@string/categorymanage_pay" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/app_divider" />

                <TextView
                    android:id="@+id/tvIncome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onChangeFragment"
                    android:text="@string/categorymanage_income" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_list_divider"
                android:layout_below="@id/loTab"
                android:background="@color/app_divider" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/loContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
    <!--  底部添加按钮  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/app_background"
        android:onClick="onAddCategory"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_list_divider"
            android:background="@color/app_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catrgorymanage_add"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
