<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical">

        <com.bigkoo.commonui.topbar.TopBarView
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_topbar_height"
            app:colorMode="Dark"
            app:showDivider="false"
            app:titleBackground="@color/app_frontground"
            app:titleText="@string/billadd_title" />

        <!--  Tab  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/loTab"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_tab_height"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/categorymanage_pay" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/app_divider" />

                <TextView
                    android:id="@+id/tvIncome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/categorymanage_income" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_list_divider"
                android:layout_below="@id/loTab"
                android:background="@color/app_divider" />
        </LinearLayout>

        <com.bigkoo.horizontalgridpage.HorizontalGridPage
            android:id="@+id/gridPage"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <!--  软键盘  -->
        <com.bigkoo.billlite.view.KeyboardView
            android:id="@+id/loKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom" />
    </LinearLayout>
</LinearLayout>